-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
21d9ada78 (dev), 3f4967823 (6.8), 7e6eeb167 (dev), 58236b2fc (dev), de4af1f40 (dev), cd2de10d4 (6.8), fa73dfbd9 (6.8), caa068658 (6.8)
Building qtcharts.git / 6.8 brnach gives following warnings:
[4686/8070] Automatic QML type registration for target ChartsQml Warning: qabstractaxis.h:: QPen is used as property type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as property type but cannot be found. Warning: qabstractaxis.h:: QPen is used as property type but cannot be found. Warning: qabstractaxis.h:: QPen is used as property type but cannot be found. Warning: qabstractaxis.h:: QPen is used as property type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as property type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as property type but cannot be found. Warning: qabstractaxis.h:: QPen is used as argument type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as argument type but cannot be found. Warning: qabstractaxis.h:: QPen is used as argument type but cannot be found. Warning: qabstractaxis.h:: QPen is used as argument type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as argument type but cannot be found. Warning: qabstractaxis.h:: QPen is used as argument type but cannot be found. Warning: qabstractaxis.h:: QBrush is used as argument type but cannot be found. Warning: qabstractbarseries.h:: QList<QBarSet*> is used as argument type but cannot be found. Warning: qabstractbarseries.h:: QList<QBarSet*> is used as argument type but cannot be found. Warning: qxyseries.h:: QPen is used as argument type but cannot be found. Warning: qxyseries.h:: QPen is used as argument type but cannot be found. Warning: qxyseries.h:: QHash<int,QHash<PointConfiguration,QVariant>> is used as argument type but cannot be found. Warning: private/declarativeareaseries_p.h:: QBrush is used as property type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativeboxplotseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativecandlestickseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativecategoryaxis_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativelineseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativepieseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativepieseries_p.h:: QList<QPieSlice*> is used as argument type but cannot be found. Warning: private/declarativepieseries_p.h:: QList<QPieSlice*> is used as argument type but cannot be found. Warning: private/declarativescatterseries_p.h:: QBrush is used as property type but cannot be found. Warning: private/declarativescatterseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativesplineseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: private/declarativebarseries_p.h:: QQmlListProperty<QObject> is used as argument type but cannot be found. Warning: qbarset.h:: QPen is used as property type but cannot be found. Warning: qbarset.h:: QBrush is used as property type but cannot be found. Warning: qbarset.h:: QBrush is used as property type but cannot be found. Warning: qcandlestickseries.h:: QBrush is used as property type but cannot be found. Warning: qcandlestickseries.h:: QPen is used as property type but cannot be found. Warning: qcandlestickseries.h:: QList<QCandlestickSet*> is used as argument type but cannot be found. Warning: qcandlestickseries.h:: QList<QCandlestickSet*> is used as argument type but cannot be found. Warning: qboxplotseries.h:: QPen is used as property type but cannot be found. Warning: qboxplotseries.h:: QBrush is used as property type but cannot be found. Warning: qboxplotseries.h:: QList<QBoxSet*> is used as argument type but cannot be found. Warning: qboxplotseries.h:: QList<QBoxSet*> is used as argument type but cannot be found. Warning: qpieseries.h:: QList<QPieSlice*> is used as argument type but cannot be found. Warning: qpieseries.h:: QList<QPieSlice*> is used as argument type but cannot be found. Warning: qgraphicswidget.h:: QGraphicsLayout is used as property type but cannot be found. Warning: qboxset.h:: QPen is used as property type but cannot be found. Warning: qboxset.h:: QBrush is used as property type but cannot be found. Warning: qcandlestickset.h:: QBrush is used as property type but cannot be found. Warning: qcandlestickset.h:: QPen is used as property type but cannot be found. Warning: qpieslice.h:: QPen is used as property type but cannot be found. Warning: qpieslice.h:: QBrush is used as property type but cannot be found. Warning: qpieslice.h:: QBrush is used as property type but cannot be found. Warning: qscatterseries.h:: QBrush is used as property type but cannot be found.
- relates to
-
QTBUG-126449 qmltyperegistrar: Build time warnings for qtmultimedia
-
- Closed
-
- resulted in
-
QTBUG-127330 QtCharts\plugins.qmltypes: Property object is missing a name or type script binding.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-126452 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 572024,1 | Add Q_GADGET to QGraphicsLayout | dev | qt/qtbase | Status: ABANDONED | +1 | +1 |
| 572025,1 | Add Q_GADGET to QPen and QBrush | dev | qt/qtbase | Status: ABANDONED | +1 | +1 |
| 572109,2 | Fix qmltyperegistrar warnings | 6.8 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 572113,2 | Fix qmltyperegistrar warnings | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573475,2 | ChartsQml: Do not make list append methods slots | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573496,3 | ChartsQml: Silence qmltyperegistrar on QGraphicsLayout | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573500,2 | ChartsQml: Silence qmltyperegistrar on QPen and QBrush | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573730,2 | ChartsQml: Do not make list append methods slots | 6.8 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573731,2 | ChartsQml: Silence qmltyperegistrar on QGraphicsLayout | 6.8 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 573738,2 | ChartsQml: Silence qmltyperegistrar on QPen and QBrush | 6.8 | qt/qtcharts | Status: MERGED | +2 | 0 |