Fix qmltyperegistrar warnings

Task-number: QTBUG-126452
Pick-to: 6.8
Change-Id: Ie6f35d3c6ee9f862f20dc93be39bad88e8ea5be4
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>